<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        app:layout_constraintEnd_toStartOf="@+id/glVertical2"
        app:layout_constraintStart_toStartOf="@+id/glVertical1"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal1"
        app:startIconContentDescription="Icon_Face"
        app:startIconDrawable="@drawable/outline_face_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfNombre"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toStartOf="@+id/glVertical2"
        app:layout_constraintStart_toStartOf="@+id/glVertical1"
        app:layout_constraintTop_toTopOf="@id/glHorizontal2"
        app:startIconContentDescription="Icon_Pass"
        app:startIconDrawable="@drawable/outline_coronavirus_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfPass"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tlfn"
        app:layout_constraintEnd_toStartOf="@+id/glVertical2"
        app:layout_constraintStart_toStartOf="@+id/glVertical1"
        app:layout_constraintTop_toTopOf="@id/glHorizontal3"
        app:startIconDrawable="@drawable/outline_phone_iphone_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfTelefono"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        app:layout_constraintEnd_toStartOf="@+id/glVertical2"
        app:layout_constraintStart_toStartOf="@+id/glVertical1"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal4"
        app:startIconContentDescription="Icon_Correo"
        app:startIconDrawable="@drawable/outline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfEmail"
            android:layout_width="333dp"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/glVertical2"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal8">

        <RadioButton
            android:id="@+id/rbSexoHombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:text="@string/hm" />

        <RadioButton
            android:id="@+id/rbSexoMujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:text="@string/mj" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/cbConsolas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consola"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toStartOf="@+id/glVertical2"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal5" />

    <CheckBox
        android:id="@+id/cbPc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toStartOf="@+id/glVertical2"
        app:layout_constraintTop_toBottomOf="@+id/cbConsolas" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/smSuscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@+id/glVertical1"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal5"
        android:text="@string/suscribe"/>

    <TextView
        android:id="@+id/tvSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:text="@string/pickSexo"
        app:layout_constraintStart_toStartOf="@+id/glVertical1"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal8" />

    <TextView
        android:id="@+id/tvPreferencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickPlay"
        app:layout_constraintBottom_toTopOf="@+id/glHorizontal5"
        app:layout_constraintEnd_toStartOf="@+id/glVertical2" />


    <Button
        android:id="@+id/btAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verde"
        android:text="@string/add"
        app:icon="@drawable/outline_group_add_24"
        app:layout_constraintStart_toStartOf="@+id/glVertical1"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal6" />


    <Button
        android:id="@+id/btDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/del"
        app:icon="@drawable/outline_person_off_24"
        app:layout_constraintEnd_toStartOf="@+id/glVertical2"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal6" />

    <Button
        android:id="@+id/btUpdate"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upd"
        app:icon="@drawable/outline_edit_24"
        app:layout_constraintEnd_toStartOf="@+id/btDelete"
        app:layout_constraintStart_toEndOf="@+id/btAdd"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal6" />

    <Button
        android:id="@+id/btAtras"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/outline_undo_24"
        app:layout_constraintStart_toEndOf="@+id/glVertical1"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal7" />

    <Button
        android:id="@+id/btDelante"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/outline_redo_24"
        app:layout_constraintEnd_toStartOf="@+id/glVertical2"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal7" />


    <TextView
        android:id="@+id/tvContador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btDelante"
        app:layout_constraintStart_toEndOf="@+id/btAtras"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal7" />

    <TextView
        android:id="@+id/tvLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/btDelante"
        app:layout_constraintStart_toEndOf="@+id/btAtras"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="60dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="350dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="68dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="137dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="205dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="359dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="477dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="536dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="286dp" />


</androidx.constraintlayout.widget.ConstraintLayout>